	 - Improved performance of anaglyph and its memory footprint for
	   data windows.
	 - Bug fixed data window in mipmap images.  Now each mipmap shows the
	   proper data window.
	 - Removed old GL drawing routines for gfx cards without textures
	   which were no longer working properly.
	 - Updated color and pixel info updates on seek.
v2.6.3.1 - Fixed selection in all cases for display and data windows.
	 - Added missing ICC_PROFILES environment variable to search for
	   ICC/ICM color profiles.
v2.6.3.0 - Fixed display window for all cases and rewrote drawing routines.
	 - Adapted safe area for display windows.
	 - Fixed side by side stereo images.
	 - Adapted anaglyph of stereo images with changing data windows.
	 - Fixed fit_image to support display window and non display windows.
	 - Adapted draw/erase/text routines to new drawing routines.  
	   Made drawing out of boundaries of images a valid behavior.
	 - Adapted mask windows for new drawing routines.
v2.6.2.0 - Added support for OpenEXR's display window and for moving data
	   windows.  Currently there's still a minor bug in that the size of
	   the data window effects the positioning of the display window.
	 - Adapted fit image function to handle moving data window.
	 - Adapted color info for moving data window.
	 - Added partial support for animated GIFs. As GIFs don't store
	   the length of the animation, a length of 100 frames is used as
	   default.
	 - Adapted draw routines to draw in data window.
	 - Adapted masking routines to draw in data window.
	 - Fixed a bug that would cause a crash when the image information
	   window would get opened for a multipart OpenEXR image.
v2.6.1.1 - Fixed audio pops in transcoding of movie files.  However, there's
	   still no way to save a H264 movie with audio from a sequence of
	   images.
v2.6.1.0 - Fixed audio saving in mpeg4 and H264.  However, there are still
	   cases that fail or that show pops in the audio.